# 15PuzzleSolver

./: .coverage  .gitattributes  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: implementation.md  specification.md  testing.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: .coveragerc  app.py  index.py  puzzle.py
src/logic/: builder.py  ida.py  pattern_builder.py  puzzle.py
src/static/: style.py
src/tests/: test_pattern_builder.py  test_puzzle.py
src/tests/logic/: test_builder.py  test_ida.py  test_puzzle.py
src/ui/: board.py  footer.py  info.py  menu.py
