[tool.poetry]
name = "15puzzlesolver"
version = "0.1.0"
description = ""
authors = ["isakpulkki <isak@pulkki.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
coverage = "^7.1.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
