[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["isakpulkki"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
coverage = "^7.1.0"
pytest = "^7.2.1"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
